--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="container">
     <h1>twitter dot com</h1>
     <form id="publisher">
         <input name="tweet" type="text" value="" placeholder="tweet something to fake twitter" class="form-control" /><br>
@@ -20,5 +21,6 @@
     </ul>
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js"></script>
+    </div>
   </body>
 </html>
