--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <ul id="timeline">
     </ul>
-    <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="js/index.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+    <script src=".//js/index.js"></script>
     </div>
   </body>
 </html>
