prevent bots from posting

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
     <h1>twitter dot com</h1>
     <form id="publisher">
+        <input name="email" type="text" value="" placeholder="your email address" class="form-control" /><br>
         <input name="tweet" type="text" value="" placeholder="tweet something to fake twitter" class="form-control" /><br>
         <input name="username" type="text" value="" placeholder="and tweet it as..." class="form-control"/><br>
         <input name="timestamp" type="text" value="" placeholder="timestamp" class="form-control" style="display:none;"/>
