--- a/tweet.html
+++ b/tweet.html
@@ -9,9 +9,9 @@
 
   <body class="expanded">
     <div class="container">
-      <img src="https://pbs.twimg.com/profile_images/378800000676674790/fa280c062763c9309ba9ea500f62d017_bigger.png" class="avi">
-      <a class="username">admittedlyhuman</a>
-      <p class="tweet-body">heaven is like "it's ok, I wanted to nurture you, I don't need anything in return" and I'm like "the stele just got ten kills taller"</p>
+      <img src="" class="avi">
+      <a class="username"></a>
+      <p class="tweet-body"></p>
       <p class="timestamp">12:40 PM - 29 Mar</p>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
