--- a/tweet.html
+++ b/tweet.html
@@ -13,6 +13,7 @@
       <a class="username"></a>
       <p class="tweet-body"></p>
       <p class="timestamp">12:40 PM - 29 Mar</p>
+      <a href="index.html" class="back-to-timeline">✕</a>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src=".//js/index.js"></script>
