link to my homepage

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div class="container">
     <h1>twitter dot com</h1>
+    <h2>by <a href="http://suchaone.github.io">such a one</a></h2>
     <form id="publisher">
         <input name="email" type="text" value="" placeholder="your email address" class="form-control" /><br>
         <input name="tweet" type="text" value="" placeholder="tweet something to fake twitter" class="form-control" /><br>
