tweet page background

--- a/tweet.html
+++ b/tweet.html
@@ -8,6 +8,7 @@
   </head>
 
   <body class="expanded">
+    <img src="images/twitter.png" class="twitter-bg">
     <div class="container">
       <img src="" class="avi">
       <a class="username"></a>
