--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </form>
 
     <ul id="timeline">
+      <div class="spinner"><img src="images/spinner.gif"></div>
     </ul>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src=".//js/index.js"></script>
