--- a/tweet.html
+++ b/tweet.html
@@ -8,7 +8,7 @@
   </head>
 
   <body class="expanded">
-    <img src="images/twitter.png" class="twitter-bg">
+    <img src="images/twitter.jpg" class="twitter-bg">
     <div class="container">
       <img src="" class="avi">
       <a class="username"></a>
