--- a/index.html
+++ b/index.html
@@ -8,9 +8,16 @@
   </head>
 
   <body>
+    <div id="header">
+      <ul>
+        <li><a href="http://suchaone.github.io/wojakgen">🆕 wojak generator</a>
+        <li><a href="http://suchaone.github.io/ingroup">ingroup badge</a>
+        <li><a href="http://www.twitter.com/suchaone">@suchaone</a>
+        <li><a href="http://suchaone.github.io">home</a>
+      </ul>
+    </div>
     <div class="container">
     <h1>twitter dot com</h1>
-    <h2>by <a href="http://suchaone.github.io">such a one</a></h2>
     <form id="publisher">
         <input name="email" type="text" value="" placeholder="your email address" class="form-control" /><br>
         <input name="tweet" type="text" value="" placeholder="tweet something to fake twitter" class="form-control" /><br>
